# memorywire

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  release.yml
deploy/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  deploy-on-tag.yml  fly.toml  seed-on-boot.py
docs/: MCP-RELATIONSHIP.md  PRIOR-WORK.md  RELEASE.md  THREATS.md  adapters.md  adversarial-results.max.json  adversarial-results.rrf.json  adversarial-results.weighted.json  architecture.md  benchmarks.md  getting-started.md  governance-ui.md  index.md  launch-post.md  mcp-server.md  pdf-inspection.txt  recovery.md
docs/demos/: README.md  cli.tape  record_ui.py  render_amp_explainer.py  render_cli.py  render_memorywire_explainer.py  render_memwire_explainer.py  render_recover.py  render_recover_explainer.py  seed_demo_db.py
docs/kickoff/: AMP-SPEC-v0.md  ARCHITECTURE.md  FINDINGS-CONTEXT.md  FUTURE.md  KICKOFF.md  PROJECT-PLAN.md
docs/launch/: 01-tweet-thread.md  02-show-hn.md  03-linkedin.md  04-dm-targets.md  README.md  recover-announce.md
docs/paper/: POLISH-REPORT.md  amp-paper.md  amp-paper.tex  eval-protocol.md  memorywire-paper.md  memorywire-paper.tex  memorywire.bib  memwire-paper.md  memwire-paper.tex  recovery-section-draft.md
docs/paper/arxiv-submission/: README.md  amp-paper.tex  amp.bib  memorywire-paper.tex  memorywire.bib  memwire-paper.tex  memwire.bib
docs/paper/user-study/: 00-irb-application.md  01-consent-form.md  02-recruitment.md  03-pre-study-survey.md  04-study-protocol.md  05-tasks.md  06-nasa-tlx.md  07-post-task-survey.md  08-debrief.md  09-analysis-protocol.md  README.md  analyze.py  synthetic-data.csv
docs/spec/: notes.md  v0.md
docs/spec/examples/expire/: 01_ttl_by_age.json  02_no_recall_archive.json  03_low_confidence_demote.json
docs/spec/examples/forget/: 01_by_ids.json  02_by_filter.json  03_hard_delete_with_reason.json
docs/spec/examples/merge/: 01_two_duplicates.json  02_three_way.json  03_merge_content.json
docs/spec/examples/recall/: 01_simple_topk.json  02_multi_type_graph_hop.json  03_weighted_cross_store.json
docs/spec/examples/remember/: 01_semantic_fact.json  02_episodic_with_ttl.json  03_procedural_fsm_with_approval.json
examples/: 01_quickstart.py  03_procedural_fsm.py  README.md
scripts/: __init__.py  bump_version.py  diag_eval_ingest.py  extract_abstract.py  inspect_pdf.py  preflight_arxiv.py  run_adversarial.py  run_locomo.py  run_longmemeval.py  run_microbench.py  validate_arxiv_bundle.py  verify_spec.py
scripts/lib/: __init__.py  eval_common.py
src/amp/: __init__.py  api.py  cli.py  models.py  procedural.py  router.py  transformer.py
src/amp/schemas/: __init__.py
src/amp/schemas/operations/: expire.json  forget.json  forget.response.json  merge.json  recall.json  recall.response.json  remember.json  remember.response.json
src/amp/schemas/types/: emotional.json  episodic.json  procedural.json  semantic.json
src/amp/store/: __init__.py  base.py  cognee_adapter.py  letta_adapter.py  mem0_adapter.py  pgvector_adapter.py  sqlite_vec.py
src/memorywire/: __init__.py  api.py  cli.py  models.py  procedural.py  router.py  transformer.py
src/memorywire/governance/: __init__.py
src/memorywire/mcp/: __init__.py  server.py
src/memorywire/recovery/: __init__.py  engine.py  report.py  strategies.py
src/memorywire/schemas/: __init__.py
src/memorywire/schemas/operations/: expire.json  forget.json  forget.response.json  merge.json  recall.json  recall.response.json  remember.json  remember.response.json
src/memorywire/schemas/types/: emotional.json  episodic.json  procedural.json  (+1 more)
src/memorywire/store/: __init__.py  base.py  cognee_adapter.py  letta_adapter.py  mem0_adapter.py  pgvector_adapter.py  sqlite_vec.py
src/memwire/: __init__.py  api.py  cli.py  models.py  procedural.py  router.py  transformer.py
src/memwire/schemas/: __init__.py
src/memwire/store/: __init__.py  base.py  cognee_adapter.py  letta_adapter.py  mem0_adapter.py  pgvector_adapter.py  sqlite_vec.py
tests/: conftest.py
tests/benchmarks/: conftest.py  dataset.py  test_adversarial.py  test_eval_harness.py  test_recall_benchmark.py
tests/conformance/: README.md  __init__.py  conftest.py  scenarios.py  test_conformance.py
tests/integration/store/: test_cognee_adapter.py  test_letta_adapter.py  test_mem0_adapter.py  test_pgvector_adapter.py  test_sqlite_vec.py
tests/unit/: test_api.py  test_cli.py  test_mcp_server.py  test_models.py  test_procedural.py  test_recovery.py  test_router.py  test_seed_on_boot.py  test_smoke.py  test_store_protocol.py  test_transformer.py  test_verify_spec.py
tests/unit/store/: test_cognee_adapter.py  test_letta_adapter.py  test_mem0_adapter.py  test_pgvector_adapter.py  test_sqlite_vec.py
ui/: LICENSE  README.md  pyproject.toml
ui/src/amp_ui/: __init__.py  __main__.py  app.py  diff.py  middleware.py  services.py
ui/src/amp_ui/routes/: __init__.py  approvals.py  audit.py  co_memorize.py  health.py  patterns.py
ui/src/amp_ui/static/: app.css
ui/src/amp_ui/templates/: approvals.html  audit.html  base.html  co_memorize.html  patterns.html
ui/src/amp_ui/templates/_partials/: approval_row.html  approvals_list.html  audit_row.html  audit_table.html
ui/src/memorywire_ui/: __init__.py  __main__.py  app.py  diff.py  middleware.py  services.py
ui/src/memorywire_ui/routes/: __init__.py  approvals.py  audit.py  co_memorize.py  health.py  patterns.py
ui/src/memorywire_ui/templates/: base.html
ui/src/memwire_ui/: __init__.py  __main__.py  app.py  diff.py  middleware.py  services.py
ui/src/memwire_ui/routes/: __init__.py  approvals.py  audit.py  co_memorize.py  health.py  patterns.py
ui/src/memwire_ui/templates/: base.html  health.html
ui/src/memwire_ui/templates/_partials/: audit_table.html  empty_state.html
ui/tests/: conftest.py  test_app.py  test_approvals.py  test_audit.py  test_co_memorize.py  test_diff.py  test_health.py  test_patterns.py
(+12 files in other folders)
