[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "memwire-governance-ui"
description = "Governance UI for memwire — Pro tier"
readme = "README.md"
license = "LicenseRef-FSL-1.1-Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
version = "0.0.0.dev0"
dependencies = [
  "memwire>=0.0.0.dev0",
  "starlette>=0.37",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
memwire-ui = "memwire_ui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memwire_ui"]
